--- a/src/br/com/arthur/reciclagem/view/FuncionarioInserirGUI.form
+++ b/src/br/com/arthur/reciclagem/view/FuncionarioInserirGUI.form
@@ -178,7 +178,7 @@
                       <Component id="jPanel9" min="-2" max="-2" attributes="0"/>
                       <EmptySpace min="-2" pref="1" max="-2" attributes="0"/>
                       <Component id="jPanel4" min="-2" max="-2" attributes="0"/>
-                      <EmptySpace pref="95" max="32767" attributes="0"/>
+                      <EmptySpace max="32767" attributes="0"/>
                   </Group>
               </Group>
             </DimensionLayout>
@@ -648,7 +648,7 @@
                 <DimensionLayout dim="0">
                   <Group type="103" groupAlignment="0" attributes="0">
                       <Group type="102" alignment="0" attributes="0">
-                          <Component id="jLabel11" min="-2" pref="233" max="-2" attributes="0"/>
+                          <Component id="jLabel11" min="-2" pref="264" max="-2" attributes="0"/>
                           <EmptySpace min="0" pref="0" max="32767" attributes="0"/>
                       </Group>
                   </Group>
@@ -669,7 +669,7 @@
                       <Color blue="ff" green="ff" red="ff" type="rgb"/>
                     </Property>
                     <Property name="horizontalAlignment" type="int" value="0"/>
-                    <Property name="text" type="java.lang.String" value="Informa&#xe7;&#xf5;es Pessoais"/>
+                    <Property name="text" type="java.lang.String" value="Informa&#xe7;&#xf5;es Profissionais"/>
                   </Properties>
                 </Component>
               </SubComponents>
