--- a/src/br/com/arthur/reciclagem/view/JanelaLogin.form
+++ b/src/br/com/arthur/reciclagem/view/JanelaLogin.form
@@ -127,7 +127,7 @@
                           </Group>
                           <Group type="102" alignment="0" attributes="0">
                               <EmptySpace min="-2" pref="106" max="-2" attributes="0"/>
-                              <Component id="jButton2" min="-2" pref="166" max="-2" attributes="0"/>
+                              <Component id="btCriarConta" min="-2" pref="166" max="-2" attributes="0"/>
                           </Group>
                       </Group>
                       <EmptySpace pref="97" max="32767" attributes="0"/>
@@ -148,7 +148,7 @@
                       <EmptySpace max="-2" attributes="0"/>
                       <Component id="jButton1" min="-2" max="-2" attributes="0"/>
                       <EmptySpace max="-2" attributes="0"/>
-                      <Component id="jButton2" min="-2" max="-2" attributes="0"/>
+                      <Component id="btCriarConta" min="-2" max="-2" attributes="0"/>
                       <EmptySpace pref="33" max="32767" attributes="0"/>
                   </Group>
               </Group>
@@ -174,10 +174,13 @@
                 <Property name="text" type="java.lang.String" value="Login"/>
               </Properties>
             </Component>
-            <Component class="javax.swing.JButton" name="jButton2">
+            <Component class="javax.swing.JButton" name="btCriarConta">
               <Properties>
                 <Property name="text" type="java.lang.String" value="Criar uma conta"/>
               </Properties>
+              <Events>
+                <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btCriarContaActionPerformed"/>
+              </Events>
             </Component>
           </SubComponents>
         </Container>
