--- a/src/br/com/arthur/reciclagem/view/FuncionarioInserirGUI.form
+++ b/src/br/com/arthur/reciclagem/view/FuncionarioInserirGUI.form
@@ -153,6 +153,9 @@
               </Properties>
             </Component>
             <Component class="javax.swing.JTextField" name="txId">
+              <Properties>
+                <Property name="editable" type="boolean" value="false"/>
+              </Properties>
             </Component>
             <Component class="javax.swing.JLabel" name="jLabel2">
               <Properties>
@@ -721,6 +724,9 @@
               <Properties>
                 <Property name="text" type="java.lang.String" value="Limpar"/>
               </Properties>
+              <Events>
+                <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btLimparActionPerformed"/>
+              </Events>
             </Component>
           </SubComponents>
         </Container>
